{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 375,
  "lineage": "c3587298-160b-a780-e014-9ec904b881b8",
  "resources": [
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0236922087fa98b6e",
            "arn": "arn:aws:ec2:us-east-1:396890348614:instance/i-0a9fc7f958f398de7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0a9fc7f958f398de7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "use1keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00ad45d874344f8bb"
              }
            ],
            "primary_network_interface_id": "eni-00ad45d874344f8bb",
            "private_dns": "ip-10-0-1-106.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.106",
            "public_ip": "3.231.4.136",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078abad18f765c326",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0f3d3a90fea8099",
            "tags": {
              "Name": "my_instance1"
            },
            "tags_all": {
              "Name": "my_instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0720ed53780befc17"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "i-0a9fc7f958f398de7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Database.aws_db_instance.my_rds",
            "module.Database.aws_db_subnet_group.aws_db_subnet_group",
            "module.Networking.aws_subnet.privatedbsubnet1",
            "module.Networking.aws_subnet.privatedbsubnet2",
            "module.Networking.aws_subnet.publicappsubnet1",
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_iam_instance_profile.ec2_profile",
            "module.Security.aws_iam_role.ec2_role",
            "module.Security.aws_security_group.ec2_sg",
            "module.Security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0236922087fa98b6e",
            "arn": "arn:aws:ec2:us-east-1:396890348614:instance/i-0e501144b9d1a836a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2_profile",
            "id": "i-0e501144b9d1a836a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "use1keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a3d5fd20e3518239"
              }
            ],
            "primary_network_interface_id": "eni-0a3d5fd20e3518239",
            "private_dns": "ip-10-0-2-199.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.199",
            "public_ip": "54.159.223.37",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0684ddeacab2a65e4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f927171fbdde97a",
            "tags": {
              "Name": "my_instance2"
            },
            "tags_all": {
              "Name": "my_instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0720ed53780befc17"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "i-0e501144b9d1a836a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Database.aws_db_instance.my_rds",
            "module.Database.aws_db_subnet_group.aws_db_subnet_group",
            "module.Networking.aws_subnet.privatedbsubnet1",
            "module.Networking.aws_subnet.privatedbsubnet2",
            "module.Networking.aws_subnet.publicappsubnet2",
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_iam_instance_profile.ec2_profile",
            "module.Security.aws_iam_role.ec2_role",
            "module.Security.aws_security_group.ec2_sg",
            "module.Security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "mylb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:loadbalancer/app/mylb/28d6b1cd67eedeef",
            "arn_suffix": "app/mylb/28d6b1cd67eedeef",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mylb-239594299.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396890348614:loadbalancer/app/mylb/28d6b1cd67eedeef",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mylb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0bdd6e1be7b33ecad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f927171fbdde97a"
              },
              {
                "subnet_id": "subnet-0c0f3d3a90fea8099"
              }
            ],
            "subnets": [
              "subnet-01f927171fbdde97a",
              "subnet-0c0f3d3a90fea8099"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:loadbalancer/app/mylb/28d6b1cd67eedeef"
          },
          "dependencies": [
            "module.Networking.aws_subnet.publicappsubnet1",
            "module.Networking.aws_subnet.publicappsubnet2",
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:listener/app/mylb/28d6b1cd67eedeef/f37521f5c3f660b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396890348614:listener/app/mylb/28d6b1cd67eedeef/f37521f5c3f660b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:loadbalancer/app/mylb/28d6b1cd67eedeef",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:listener/app/mylb/28d6b1cd67eedeef/f37521f5c3f660b6"
          },
          "dependencies": [
            "module.LoadBalancer.aws_lb.mylb",
            "module.LoadBalancer.aws_lb_target_group.mytg",
            "module.Networking.aws_subnet.publicappsubnet1",
            "module.Networking.aws_subnet.publicappsubnet2",
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "mytg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
            "arn_suffix": "targetgroup/mytg/edb8e31ba93ecec9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mytg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9,i-0a9fc7f958f398de7,8000",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
            "target_id": "i-0a9fc7f958f398de7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
            "target_id": "i-0a9fc7f958f398de7"
          },
          "dependencies": [
            "module.Compute.aws_instance.my_instance1",
            "module.Database.aws_db_instance.my_rds",
            "module.Database.aws_db_subnet_group.aws_db_subnet_group",
            "module.LoadBalancer.aws_lb_target_group.mytg",
            "module.Networking.aws_subnet.privatedbsubnet1",
            "module.Networking.aws_subnet.privatedbsubnet2",
            "module.Networking.aws_subnet.publicappsubnet1",
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_iam_instance_profile.ec2_profile",
            "module.Security.aws_iam_role.ec2_role",
            "module.Security.aws_security_group.ec2_sg",
            "module.Security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.LoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9,i-0e501144b9d1a836a,8000",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
            "target_id": "i-0e501144b9d1a836a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "port": 8000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:396890348614:targetgroup/mytg/edb8e31ba93ecec9",
            "target_id": "i-0e501144b9d1a836a"
          },
          "dependencies": [
            "module.Compute.aws_instance.my_instance2",
            "module.Database.aws_db_instance.my_rds",
            "module.Database.aws_db_subnet_group.aws_db_subnet_group",
            "module.LoadBalancer.aws_lb_target_group.mytg",
            "module.Networking.aws_subnet.privatedbsubnet1",
            "module.Networking.aws_subnet.privatedbsubnet2",
            "module.Networking.aws_subnet.publicappsubnet2",
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_iam_instance_profile.ec2_profile",
            "module.Security.aws_iam_role.ec2_role",
            "module.Security.aws_security_group.ec2_sg",
            "module.Security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_int_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:internet-gateway/igw-0ee7c663f2b3c8ab9",
            "id": "igw-0ee7c663f2b3c8ab9",
            "owner_id": "396890348614",
            "region": "us-east-1",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "igw-0ee7c663f2b3c8ab9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:route-table/rtb-054b51440a8c00ec2",
            "id": "rtb-054b51440a8c00ec2",
            "owner_id": "396890348614",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtb-054b51440a8c00ec2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:route-table/rtb-0b877236dc1dfbad2",
            "id": "rtb-0b877236dc1dfbad2",
            "owner_id": "396890348614",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee7c663f2b3c8ab9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtb-0b877236dc1dfbad2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.my_int_gw",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc42cdb174f342a",
            "region": "us-east-1",
            "route_table_id": "rtb-054b51440a8c00ec2",
            "subnet_id": "subnet-074b922fabf47b75f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtbassoc-0ffc42cdb174f342a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private_route_table",
            "module.Networking.aws_subnet.privateappsubnet1",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e07a8823dabb93",
            "region": "us-east-1",
            "route_table_id": "rtb-054b51440a8c00ec2",
            "subnet_id": "subnet-0c4639d1bda028630"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtbassoc-087e07a8823dabb93",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private_route_table",
            "module.Networking.aws_subnet.privateappsubnet2",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092c5422840d6de55",
            "region": "us-east-1",
            "route_table_id": "rtb-054b51440a8c00ec2",
            "subnet_id": "subnet-0be6473e52a2e4607"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtbassoc-092c5422840d6de55",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private_route_table",
            "module.Networking.aws_subnet.privatedbsubnet1",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d87fb44180fcfdf",
            "region": "us-east-1",
            "route_table_id": "rtb-054b51440a8c00ec2",
            "subnet_id": "subnet-05357f91002fc85d5"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtbassoc-02d87fb44180fcfdf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_route_table.private_route_table",
            "module.Networking.aws_subnet.privatedbsubnet2",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c61dc92d835361f3",
            "region": "us-east-1",
            "route_table_id": "rtb-0b877236dc1dfbad2",
            "subnet_id": "subnet-0c0f3d3a90fea8099"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtbassoc-0c61dc92d835361f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.my_int_gw",
            "module.Networking.aws_route_table.public_route_table",
            "module.Networking.aws_subnet.publicappsubnet1",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2493ce10f7d2cb1",
            "region": "us-east-1",
            "route_table_id": "rtb-0b877236dc1dfbad2",
            "subnet_id": "subnet-01f927171fbdde97a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "rtbassoc-0b2493ce10f7d2cb1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_internet_gateway.my_int_gw",
            "module.Networking.aws_route_table.public_route_table",
            "module.Networking.aws_subnet.publicappsubnet2",
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateappsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:subnet/subnet-074b922fabf47b75f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074b922fabf47b75f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396890348614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "privateappsubnet1"
            },
            "tags_all": {
              "Name": "privateappsubnet1"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "subnet-074b922fabf47b75f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateappsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:subnet/subnet-0c4639d1bda028630",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4639d1bda028630",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396890348614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "privateappsubnet2"
            },
            "tags_all": {
              "Name": "privateappsubnet2"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "subnet-0c4639d1bda028630",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatedbsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:subnet/subnet-0be6473e52a2e4607",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be6473e52a2e4607",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396890348614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "privatedbsubnet1"
            },
            "tags_all": {
              "Name": "privatedbsubnet1"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "subnet-0be6473e52a2e4607",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatedbsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:subnet/subnet-05357f91002fc85d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05357f91002fc85d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "396890348614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "privatedbsubnet2"
            },
            "tags_all": {
              "Name": "privatedbsubnet2"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "subnet-05357f91002fc85d5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicappsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:subnet/subnet-0c0f3d3a90fea8099",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0f3d3a90fea8099",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396890348614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "publicappsubnet1"
            },
            "tags_all": {
              "Name": "publicappsubnet1"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "subnet-0c0f3d3a90fea8099",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicappsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:subnet/subnet-01f927171fbdde97a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f927171fbdde97a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "396890348614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "publicappsubnet2"
            },
            "tags_all": {
              "Name": "publicappsubnet2"
            },
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "subnet-01f927171fbdde97a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:vpc/vpc-0f5a659fd5c80ba3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb6e540f76e74846",
            "default_route_table_id": "rtb-08844718d4970aaf8",
            "default_security_group_id": "sg-07b24b5541ba42318",
            "dhcp_options_id": "dopt-09a8644ff20e5c0a7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5a659fd5c80ba3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08844718d4970aaf8",
            "owner_id": "396890348614",
            "region": "us-east-1",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "vpc-0f5a659fd5c80ba3e",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group/sg-0bdd6e1be7b33ecad",
            "description": "Allow http inbound traffic from internet and all outbound traffic",
            "egress": [],
            "id": "sg-0bdd6e1be7b33ecad",
            "ingress": [],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "396890348614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sg-0bdd6e1be7b33ecad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group/sg-0720ed53780befc17",
            "description": "Allow http inbound traffic from alb and all outbound traffic",
            "egress": [],
            "id": "sg-0720ed53780befc17",
            "ingress": [],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "396890348614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sg-0720ed53780befc17",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group/sg-0fbc62e4ed72504cb",
            "description": "Allow traffic from ec2 to rds",
            "egress": [],
            "id": "sg-0fbc62e4ed72504cb",
            "ingress": [],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "396890348614",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a659fd5c80ba3e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sg-0fbc62e4ed72504cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-060310b46a278ea46",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-060310b46a278ea46",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0720ed53780befc17",
            "security_group_rule_id": "sgr-060310b46a278ea46",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-060310b46a278ea46",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-08a6e2b075efc1ac5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08a6e2b075efc1ac5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0bdd6e1be7b33ecad",
            "security_group_rule_id": "sgr-08a6e2b075efc1ac5",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-08a6e2b075efc1ac5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-0187811ee4d17fb6f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0187811ee4d17fb6f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0fbc62e4ed72504cb",
            "security_group_rule_id": "sgr-0187811ee4d17fb6f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-0187811ee4d17fb6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.rds_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-0e68034c11ca5395d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8000,
            "id": "sgr-0e68034c11ca5395d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0bdd6e1be7b33ecad",
            "region": "us-east-1",
            "security_group_id": "sg-0720ed53780befc17",
            "security_group_rule_id": "sgr-0e68034c11ca5395d",
            "tags": null,
            "tags_all": {},
            "to_port": 8000
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-0e68034c11ca5395d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.alb_sg",
            "module.Security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-0f1f326ec710f0e87",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0f1f326ec710f0e87",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0bdd6e1be7b33ecad",
            "security_group_rule_id": "sgr-0f1f326ec710f0e87",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-0f1f326ec710f0e87",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ipv4_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-09766059a848b23e7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-09766059a848b23e7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0720ed53780befc17",
            "security_group_rule_id": "sgr-09766059a848b23e7",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-09766059a848b23e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.Security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allows",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:396890348614:security-group-rule/sgr-03f300eb488b7635b",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-03f300eb488b7635b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0720ed53780befc17",
            "region": "us-east-1",
            "security_group_id": "sg-0fbc62e4ed72504cb",
            "security_group_rule_id": "sgr-03f300eb488b7635b",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "396890348614",
            "id": "sgr-03f300eb488b7635b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.Networking.aws_vpc.my_vpc",
            "module.Security.aws_security_group.ec2_sg",
            "module.Security.aws_security_group.rds_sg"
          ]
        }
      ]
    }
  ]
}